# CNN_Classifier

./: .gitignore  LICENSE  README.md  dvc.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini  toxi.ini
.github/workflows/: ci.yml
research/: stage_01.ipynb  stage_02.ipynb  stage_03.ipynb  stage_04.ipynb  stage_05.ipynb  trails.ipynb
scripts/CNN_Classifier/: __init__.py
scripts/CNN_Classifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
scripts/CNN_Classifier/config/: configuration.py
scripts/CNN_Classifier/constants/: __init__.py
scripts/CNN_Classifier/entity/: __init__.py  config_entity.py
scripts/CNN_Classifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
scripts/CNN_Classifier/utils/: common.py
tests/unit/: test_utils.py
