[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2  # Update list
python_requires = >=3.7

[options.extras_require]
testing =
    pytest>=7.1.3  # Controls for unit and integration test
    mypy>=0.971    # Controls the typing error
    flake8>=5.0.4  # Controls the unwanted spaces and errors (linting tool) 
    tox>=3.25.1    # Controls different working environments
    black>=22.8.0  # Controls standard python structure

[options.package_data]
CNN_Classifier = py.typed # Update package name
  
[flake8]
max-line-length = 160
exclude = __init__.py